# tikbot

./: .env  FEATURES_ROADMAP.md  QUICK_START.md  README.md  claude.md  config.yaml  env.example  pyproject.toml  test_audio.py
data/: analytics.db
src/tikbot/: __init__.py  main.py
src/tikbot/ai/: __init__.py  client.py  conversation.py  manager.py
src/tikbot/analytics/: __init__.py  collector.py  manager.py  processor.py  visualizer.py
src/tikbot/api/: __init__.py  server.py
src/tikbot/audio/: __init__.py  alerts.py  manager.py  player.py
src/tikbot/core/: __init__.py  bot.py  config.py  events.py
src/tikbot/music/: __init__.py  manager.py  queue.py  spotify.py  youtube.py
src/tikbot/overlay/: __init__.py  manager.py  renderer.py  websocket.py
src/tikbot/tts/: __init__.py  engine.py  manager.py
static/css/: overlay.css
static/js/: overlay-websocket.js
templates/overlay/: alerts_overlay.html  analytics_dashboard.html  chat_overlay.html  dashboard.html  goal_overlay.html  music_overlay.html  stats_overlay.html
